python/testData/quickFixes/PyTypeHintsQuickFixTest/callableTwoElementsTupleAsFirst.py
from typing import Callable

g: Callable[<error descr="'Callable' must be used as 'Callable[[arg, ...], result]'">(int<caret>, str)</error>, str]